# wasml-llama

./: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml  sync.yml
bench/: README.md  package.json  tsconfig.json
bench/browser/: bench-browser.js  bench-worker.js  index.html  model-cache.js
bench/src/: browser-benchmark.ts  chrome-profile.ts  cli.ts  config.ts  http-server.ts  index.ts  node-benchmark.ts  result-writer.ts  serve.ts  types.ts  webgpu-availability.ts
ci/: README.md
ci/scripts/: build-release.mjs  check-abi.mjs  check-release.mjs  sync-upstream.mjs
docs/: README.md  architecture.md  compatibility-matrix.md  failure-cases.md  state-machine.md
runtime-api/: README.md  package.json  tsconfig.json
runtime-api/src/: async-queue.ts  client.ts  index.ts  pool.ts
runtime-core/: README.md  package.json  tsconfig.json
runtime-core/src/: adapter.ts  emscripten-adapter.ts  errors.ts  events.ts  index.ts  runtime-core.ts
runtime-worker/: README.md  package.json  tsconfig.json
runtime-worker/src/: entry.ts  index.ts
tests/: package.json  tsconfig.json  vitest.config.ts
tests/failure-injection/: recovery.spec.ts
tests/integration/: api-worker.spec.ts
tests/snapshot/: token-output.spec.ts
tests/support/: fake-adapter.ts  fake-worker.ts
tests/unit/: manifest.spec.ts  (+1 more)
tooling/: README.md  package.json  tsconfig.json
upstream-sync/: README.md
upstream-sync/overlays/wasml-llama/: CMakeLists.txt
upstream-sync/overlays/wasml-llama/src/: wasml_llama_bridge.cpp
wasm-build/: README.md  package.json  tsconfig.json
(+33 files in other folders)
